<resources>
	<string name="app_name">Socks5</string>

    <string name="activity_home_node">设置节点信息</string>

	<string name="permission_vpn_reject">您拒绝了VPN请求</string>

	<string name="menu_home">项目主页</string>
	<string name="menu_setting">应用设置</string>

	<string name="home_node_hint">节点:</string>
    <string name="home_node_add">存储节点</string>
    <string name="home_node_current_host">请点击输入节点信息</string>
    <string name="home_node_input_type_tcp">仅代理TCP</string>
    <string name="home_node_input_type_udp">仅代理UDP</string>
    <string name="home_node_input_type_all">全局代理模式</string>
    <string name="home_node_input_type_local">本地监控模式（无代理）</string>
    <string name="home_node_input_host_hint">输入服务器地址</string>
    <string name="home_node_input_port_hint">输入服务器端口</string>
    <string name="home_node_input_user_hint">输入用户名（选填）</string>
    <string name="home_node_input_pass_hint">输入密码（选填）</string>
    <string name="home_node_input_not_null">必填</string>




	<string name="app_mode">应用模式</string>



	<!-- Toast -->
	<string name="toast_main_param_error">输入参数错误</string>

	<string name="toast_service_tun_null">"启动tun失败"</string>
	<string name="toast_service_param_error">"参数错误"</string>
	<string name="toast_service_host_error">"主机错误"</string>
	<string name="toast_service_port_error">"端口错误"</string>
	<string name="toast_service_always_run">"Socks5已经是启动状态"</string>

	<!-- 通知-->
	<string name="notify_channel_description">创建Socks5服务的状态通知</string>
	<string name="notify_tile_text">Socks5 已连接</string>
	<string name="notify_context_text">点击可停用Socks5连接</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>