<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="15dp"
    android:orientation="vertical"
    android:paddingTop="20dp"
    tools:context=".ui.home.HomeNodeActivity">

    <Spinner
        style="@style/Socks5NodeInput"
        android:id="@+id/input_type"
        android:layout_marginTop="1dp"
        android:entries="@array/nodeInputType"
        />

    <EditText
        style="@style/Socks5NodeInput"
        android:id="@+id/input_host"
        android:hint="@string/home_node_input_host_hint"
        />
    <EditText
        style="@style/Socks5NodeInput"
        android:id="@+id/input_port"
        android:inputType="number"
        android:hint="@string/home_node_input_port_hint"
        />
    <EditText
        style="@style/Socks5NodeInput"
        android:id="@+id/input_user"
        android:hint="@string/home_node_input_user_hint"
        />
    <EditText
        style="@style/Socks5NodeInput"
        android:id="@+id/input_pass"
        android:inputType="textPassword"
        android:hint="@string/home_node_input_pass_hint"
        />
    <CheckBox
        android:id="@+id/input_pass_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white_aa"
        android:buttonTint="@color/white_aa"
        android:text="显示密码" >
    </CheckBox>

    <Button
        style="@style/Socks5NodeInput"
        android:id="@+id/input_submit"
        android:text="@string/home_node_add"
        android:layout_marginTop="40dp"
        android:textSize="16sp"
        android:textColor="?attr/colorPrimary"
        android:background="@drawable/radius_8dp"
        android:backgroundTint="@color/blue"
        android:gravity="center"
        />



</LinearLayout>